Visual Variables and Timer and End Message

--- a/experiment.html
+++ b/experiment.html
@@ -80,6 +80,17 @@
     </div>
     <div id="sceneCanvas">
     </div>
+
+    <svg>
+      <defs>
+        <filter id="shadow1">
+          <feDropShadow dx="0" dy="0" stdDeviation="0" />
+        </filter>
+        <filter id="shadow2">
+          <feDropShadow dx="2" dy="3" stdDeviation="1.0" />
+        </filter>
+      </defs>  
+    </svg>
   </body>
 
 </html>
