--- a/experiment.html
+++ b/experiment.html
@@ -83,10 +83,10 @@
 
     <svg>
       <defs>
-        <filter id="shadow1">
+        <filter id="shadowOff">
           <feDropShadow dx="0" dy="0" stdDeviation="0" />
         </filter>
-        <filter id="shadow2">
+        <filter id="shadowOn">
           <feDropShadow dx="2" dy="3" stdDeviation="1.0" />
         </filter>
       </defs>  
